--- a/docs/report.tex
+++ b/docs/report.tex
@@ -51,10 +51,10 @@
 \tab Sorting is not a leap but it has emerged in parallel with the development of the human mind.
 In computer science, alphabetizing, arranging, categorizing, or putting data items in an ordered sequence on the basis of similar properties is called sorting.
 Sorting is of key importance because it optimizes the usefulness of data.
+We can observe plenty of sorting examples in our daily life, e.g. we can easily find required items in a shopping mall or utility store because the items are kept categorically.
 \newline
 \newline
-\tab We can observe plenty of sorting examples in our daily life, e.g. we can easily find required items in a shopping mall or utility store because the items are kept categorically.
-The items to be sorted may be in various forms i.e. random as a whole, already sorted, very small or extremely large in numer, sorted in reverse order etc.
+\tab The items to be sorted may be in various forms i.e. random as a whole, already sorted, very small or extremely large in numer, sorted in reverse order etc.
 There is no algorithm that is best for sorting all types of data. 
 We must be familiar with sorting algorithms in terms of their suitability in a particular situation.
 \newline
@@ -82,14 +82,15 @@ Sort, Merge Sort, Quick Sort, Counting Sort, Radix Sort, and Flash Sort) for the
             $minIndex \gets j$
         }
     }
-    swap($minIndex$, $i$)
+    swap($a_{minIndex}$, $a_{i}$)
   }
   \caption{Selection Sort}
 \end{algorithm2e}
 
 \subsubsection*{Complexity}
-Time Complexity: $O(N^2)$ \\
-Space Complexity: $O(N)$
+Best case time complexity: $O(N^2)$ \\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
 
 \subsection{Insertion Sort}
 
