--- a/docs/report.tex
+++ b/docs/report.tex
@@ -32,7 +32,7 @@
 }
 
 \author{Huynh Minh Tuan - 20120024@student.hcmus.edu.vn}
-\date{December 2021}
+\date{November 2021}
 
 \begin{document}
 
@@ -77,7 +77,7 @@ Sort, Merge Sort, Quick Sort, Counting Sort, Radix Sort, and Flash Sort) for the
   \SetAlgoLined
   \For{$i \gets 1$ to $N$}{
     $minIndex \gets i$\\
-    \For{$j \gets i+1$ to N}{
+    \For{$j \gets i+1$ to $N$}{
         \If{$a_{minIndex} > a_{j}$}{
             $minIndex \gets j$
         }
@@ -93,13 +93,344 @@ Worst case time complexity: $O(N^2)$ \\
 Worst case space complexity: $O(1)$
 
 \subsection{Insertion Sort}
+\subsubsection*{Idea}
+\tab The main idea of insertion sort is that array is divided in two parts which left part is already sorted, and right part is unsorted.
+Values from the unsorted part are picked and placed at the correct position in the sorted part.
+So, at every iteration sorted part grows by one element which is called key.
+During an iteration, if compared element is greater than key then compared element has to shift to right to open a position for key.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  \For{$i \gets 2$ to $N$}{
+    $k \gets i-1$\\
+    $key \gets a_i$\\
+    \While{$a_k > key$ and $k \geq 0$}{
+      $a_{k+1} \gets a_{k}$\\
+      $k \gets k-1$
+    }
+    $a_{k+1} \gets key$
+  }
+  \caption{Insertion Sort}
+\end{algorithm2e}
+\newpage
+\subsubsection*{Complexity}
+Best case time complexity: $O(N)$ \\
+Average case time complexity: $O(N^2)$\\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
 
 \subsection{Bubble Sort}
+\subsubsection*{Idea}
+\tab Bubble sort is based on the idea of repeatedly comparing pairs of adjacent elements and then 
+swapping their positions if they exist in the wrong order.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  \For{$i \gets N$ to $1$}{
+    $isSwap \gets False$\\
+    \For{$j \gets 1$ to $i-1$}{
+        \If{$a_{j} > a_{j+1}$}{
+          $isSwap \gets True$\\
+          swap($a_j$, $a_{j+1}$)
+        }
+    }
+    \If{$isSwap = False$}{
+      stop algorithm
+    }
+  }
+  \caption{Bubble Sort}
+\end{algorithm2e}
+
+In this paper, I implemented bubble sort with a flag $isSwap$ to stop the algorithm early
+when the array is sorted.
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N)$ \\
+Average case time complexity: $O(N^2)$\\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
+
 \subsection{Shaker Sort}
+\subsubsection*{Idea}
+\tab Shaker sort is a bidirectional version of bubble sort.
+The Bubble sort algorithm always traverses elements from left and moves the largest 
+element to its correct position in first iteration and second largest in second iteration and so on.
+Shaker sort orders the array in both directions. Hence every iteration of the algorithm consists of two phases. 
+In the first one, the lightest bubble ascends to the end of the array, in the second phase the heaviest bubble descends to the beginning of the array.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  $left \gets 0$ \\
+  $right \gets N-1$ \\
+  $k \gets 0$\\
+  \For{$i \gets left$ to $right$}{
+    \tcp{phase 1}
+    $isSwap \gets False$\\
+    \For{$j \gets left$ to $right-1$}{
+        \If{$a_{j} > a_{j+1}$}{
+          $isSwap \gets True$\\
+          swap($a_j$, $a_{j+1}$)\\
+          $k \gets j$
+        }
+    }
+    \If{$isSwap = False$}{
+      stop algorithm
+    }
+    $right \gets k$
+
+    \tcp{phase 2}
+    $isSwap \gets False$\\
+    \For{$j \gets right$ to $left+1$}{
+        \If{$a_{j} < a_{j-1}$}{
+          $isSwap \gets True$\\
+          swap($a_j$, $a_{j-1}$)\\
+          $k \gets j$
+        }
+    }
+    \If{$isSwap = False$}{
+      stop algorithm
+    }
+    $left \gets k$
+  }
+  \caption{Shaker Sort}
+\end{algorithm2e}
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N)$ \\
+Average case time complexity: $O(N^2)$\\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
+
 \subsection{Shell Sort}
+\subsubsection*{Idea}
+Shell sort is a generalized version of the insertion sort algorithm. 
+It first sorts elements that are far apart from each other and successively reduces the interval between the elements to be sorted.
+
+The interval between the elements is reduced based on the sequence used. 
+Some of the optimal sequences that can be used in the shell sort algorithm are:
+\begin{itemize}
+\item Shell's original sequence
+\item Knuth's increments
+\item Sedgewick's increments
+\item Hibbard's increments
+\item ...
+\end{itemize}
+
+In this paper, I only implemented the algorithm with optimal sequence based on Shell's original sequence.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  $interval \gets \dfrac{N}{2}$\\
+  \While{$interval > 0$}{
+    \For{$i \gets interval$ to $N$}{
+      $temp \gets a_i$\\
+      $j \gets i$\\
+      \While{$interval \leq j$ and $a_{j-interval} > temp$}{
+        $a_j \gets a_{j-interval}$\\
+        $j \gets j - interval$
+      }
+    }
+    $a_j \gets temp$\\
+    $interval \gets \dfrac{interval}{2}$
+  }
+  \caption{Shell Sort}
+\end{algorithm2e}
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N)$ \\
+Average case time complexity: $O(N\log N)$\\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
+
 \subsection{Heap Sort}
+\subsubsection*{Idea}
+\tab Heap sort is a comparison-based sorting algorithm. 
+Heap sort can be thought of as an improved selection sort: like selection sort, heap sort divides its input into a sorted and an unsorted region, and it iteratively shrinks the unsorted region by extracting the largest element from it and inserting it into the sorted region. 
+\newline
+\tab Unlike selection sort, heapsort does not waste time with a linear-time scan of the unsorted region; rather, heap sort maintains the unsorted region 
+in a \textbf{heap data structure} to more quickly find the largest element in each step.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  \SetKwFunction{FMain}{HeapRebuild}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $pos$, $N$}}{
+    \While{$2\cdot pos + 1 <= N$}{
+      $j = 2\cdot pos + 1$\\
+      \If{$j < N$}{
+        \If{$a_j < a_{j+1}$}{
+          $j \gets j + 1$
+        }
+      }
+      \If{$a_{pos} \geq a_j$}{
+        \textbf{return}
+      }
+      swap($a_{pos}$, $a_j$)\\
+      $pos \gets j$
+    }
+  }
+
+  \SetKwFunction{FMain}{HeapConstruct}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $N$}}{
+    \For{$i \gets N/2$ to $0$}{
+      HeapRebuild($a$, $i$, $n$)
+    }
+  }
+
+  \SetKwFunction{FMain}{HeapSort}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $N$}}{
+    HeapConstruct(a, N)\\
+    $r \gets N$\\
+    \While{$r > 0$}{
+      swap($a_1$, $a_N$)\\
+      HeapRebuild(a, 1, r)\\
+      $r \gets r-1$
+    }
+  }
+  \caption{Heap Sort}
+\end{algorithm2e}
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N \log N)$ \\
+Average case time complexity: $O(N\log N)$\\
+Worst case time complexity: $O(N \log N)$ \\
+Worst case space complexity: $O(1)$
+
 \subsection{Merge Sort}
+\subsubsection*{Idea}
+\tab Merge sort is a recursive sorting algorithm based on a "divide and conquer" approach.
+It divides the input array into two halves, calls itself for the two halves, and then merges the two sorted halves.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  \SetKwFunction{FMain}{Merge}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $first$, $mid$, $last$}}{
+    $n_1 \gets mid - first + 1$\\
+    $n_2 \gets last - mid$\\
+    $L \gets a_{first}, a_{first+1}, ..., a_{mid}$\\
+    $R \gets a_{mid+1}, a_{mid+2}, ..., a_{last}$\\
+    \tcp{merge}
+    $i \gets 0$\\
+    $j \gets 0$\\
+    $k \gets first$\\
+    \While{$i < n_1$ and $j < n_2$}{
+      \eIf{$L_i < R_j$}{
+        $a_k \gets L_i$\\
+        $i \gets i+1$
+      }{
+        $a_k \gets R_j$\\
+        $j \gets j+1$
+      }
+      $k \gets k+1$
+    }
+    \While{$j < n_2$}{
+      $a_k \gets R_j$\\
+      $k \gets k+1$\\
+      $j \gets j+1$
+    }
+    \While{$i < n_1$}{
+      $a_k \gets L_i$\\
+      $k \gets k+1$\\
+      $i \gets i+1$
+    }
+  }
+  \SetKwFunction{FMain}{MergeSort}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $first$, $last$}}{
+    \If{$first < last$}{
+      $mid \gets first + (last - first)/2$\\
+      MergeSort($a$, $first$, $mid$)\\
+      MergeSort($a$, $mid+1$, $last$)\\
+      Merge($a$, $first$, $mid$, $last$)
+    }
+  }
+  \caption{Merge Sort}
+\end{algorithm2e}
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N \log N)$ \\
+Average case time complexity: $O(N\log N)$\\
+Worst case time complexity: $O(N \log N)$ \\
+Worst case space complexity: $O(N)$
+
 \subsection{Quick Sort}
+\subsubsection*{Idea}
+Like Merge Sort, Quick Sort is a Divide and Conquer algorithm. 
+It picks an element as a pivot and partitions the given array around the picked pivot. 
+There are many different versions of quickSort that pick pivot in different ways. 
+
+\begin{itemize}
+  \item Pick first element as pivot.
+  \item Pick last element as pivot
+  \item Pick a random element as pivot.
+  \item Pick median as pivot.
+\end{itemize}
+
+In this paper, I implemented the algorithm with pivot is a median of array.
+
+\subsubsection*{Pseudo code}
+\begin{algorithm2e}
+  \KwIn{$a_1, a_2, ..., a_N$}
+  \KwOut{$a_1, a_2, ..., a_N$ (in sorted)}
+  \SetAlgoLined
+  \SetKwFunction{FMain}{Partition}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $l$, $r$}}{
+    $pivot \gets a_{(l+r)/2}$\\
+    \While{$l \leq r$}{
+      \While{$a_l < pivot$}{
+        $l \gets l+1$
+      }
+      \While{$a_r > pivot$}{
+        $r \gets r-1$
+      }
+      \If{$l \leq r$}{
+        swap($a_l$, $a_r$)\\
+        $l \gets l+1$\\
+        $r \gets r-1$
+      }
+    }
+    \textbf{return} l
+  }
+  \SetKwFunction{FMain}{QuickSort}
+  \SetKwProg{Fn}{Function}{:}{}
+  \Fn{\FMain{$a$, $l$, $r$}}{
+    \If{$l < r$}{
+      $mid \gets$ Partition($a$, $l$, $r$)\\
+      QuickSort($a$, $l$, $mid-1$)\\
+      QuickSort($a$, $mid$, $r$)
+    }
+  }
+  \caption{Quick Sort}
+\end{algorithm2e}
+
+\subsubsection*{Complexity}
+Best case time complexity: $O(N)$ \\
+Average case time complexity: $O(N \log N)$\\
+Worst case time complexity: $O(N^2)$ \\
+Worst case space complexity: $O(1)$
+
 \subsection{Counting Sort}
 \subsection{Radix Sort}
 \subsection{Flash Sort}
