--- a/docs/report.tex
+++ b/docs/report.tex
@@ -622,11 +622,11 @@ The results were calculated after tabulation and their graphical represention wa
   \hline
   \textbf{Result} & Time (ms) & Comparision & Time (ms) & Comparision & Time (ms) & Comparision \\
   \hline
-  Selection & 134.179 & 50005001 & 1010.114 & 450015001 & 3161.295 & 1250025001 \\
+  Selection & 112.733 & 50005001 & 993.92 & 450015001 & 2661.613 & 1250025001 \\
   \hline
-  Insertion & 0.055 & 19999 & 0.155 & 59999 & 0.179000 & 99999 \\
+  Insertion & 0.052 & 19999 & 0.119 & 59999 & 0.177 & 99999 \\
   \hline
-  Bubble & 0.036 & 20001 & 0.075 & 60001 & 0.123 & 100001 \\
+  Bubble & 0.029 & 20001 & 0.067 & 60001 & 0.114 & 100001 \\
   \hline
   Shaker & 0.026 & 20001 & 0.073 & 60001 & 0.129 & 100001 \\
   \hline
@@ -693,27 +693,27 @@ The results were calculated after tabulation and their graphical represention wa
   \hline
   \textbf{Result} & Time (ms) & Comparision & Time (ms) & Comparision & Time (ms) & Comparision \\
   \hline
-  Selection & 110.647 & 50005001 & 948.147 & 450015001 & 2468.645 & 1250025001 \\
+  Selection & 114.804 & 50005001 & 892.508 & 450015001 & 2815.055 & 1250025001 \\
   \hline
-  Insertion & 0.214 & 19999 & 0.598 & 59999 & 0.973 & 99999 \\
+  Insertion & 0.272 & 186007 & 0.533 & 421299 & 1.59 & 792443 \\
   \hline
-  Bubble & 0.036 & 20001 & 0.075 & 60001 & 0.123 & 100001 \\
+  Bubble & 138.364 & 95109345 & 825.406 & 773520000 & 2760.609 & 2463630480 \\
   \hline
-  Shaker & 0.026 & 20001 & 0.073 & 60001 & 0.129 & 100001 \\
+  Shaker & 0.538 & 195793 & 1.251 & 470236 & 2.147 & 833872 \\
   \hline
-  Shell & 0.558 & 240024 & 1.762000 & 780029 & 3.423000 & 1400028 \\
+  Shell & 0.675 & 288983 & 2.146 & 907030 & 4.659 & 1684266 \\
   \hline
-  Heap & 2.333 & 518705 & 5.418 & 1739633 & 9.129000 & 3056481 \\
+  Heap & 1.407 & 518491 & 5.226 & 1739623 & 11.406 & 3056352 \\
   \hline
-  Merge & 1.694 & 406234 & 3.632 & 1332186 & 6.21 & 2320874 \\
+  Merge & 1.052 & 421044 & 3.477 & 1381719 & 5.788 & 2407406 \\
   \hline
-  Quick & 0.598 & 193611 & 1.327 & 627227 & 2.218 & 1084459 \\
+  Quick & 0.422 & 193651 & 1.343 & 627279 & 2.527 & 1084495 \\
   \hline
-  Counting & 0.162 & 60003 & 0.369 & 180003 & 0.572 & 300003 \\
+  Counting & 0.122 & 60003 & 0.364 & 180003 & 0.519 & 300003 \\
   \hline
-  Radix & 1.489 & 170106 & 3.738 & 630132 & 7.198 & 1050132 \\
+  Radix & 1.026 & 170106 & 3.725 & 630132 & 6.265 & 1050132 \\
   \hline
-  Flash & 0.597 & 103496 & 1.118 & 310496 & 2.359 & 517496 \\
+  Flash & 0.455 & 103470 & 1.063 & 310464 & 1.951 & 517470 \\
   \hline
 \end{tabular}
 
@@ -724,27 +724,27 @@ The results were calculated after tabulation and their graphical represention wa
   \hline
   \textbf{Result} & Time (ms) & Comparision & Time (ms) & Comparision & Time (ms) & Comparision \\
   \hline
-  Selection & 11578.892 & 5000050001 & 101293.857 & 45000150001 & 281740.886 & 125000250001 \\
+  Selection & 10517.345 & 5000050001 & 98131.833 & 45000150001 & 268308.098 & 125000250001 \\
   \hline
-  Insertion & 0.411 & 199999 & 1.044 & 599999 & 1.829 & 999999 \\
+  Insertion & 2.862 & 2143771 & 3.917 & 2784471 & 9.615 & 7687035 \\
   \hline
-  Bubble & 0.282 & 200001 & 0.765 & 600001 & 1.303 & 1000001  \\
+  Bubble & 10614.255 & 9835488445 & 91618.611 & 80529222960 & 244003.655 & 214177110017  \\
   \hline
-  Shaker & 0.245 & 200001 & 0.778 & 600001 & 1.272 & 1000001 \\
+  Shaker & 6.193 & 2239517 & 9.282 & 3358098 & 21.366 & 8256564 \\
   \hline
-  Shell & 7.336 & 3000029 & 25.944 & 10200035 & 41.04 & 17000033 \\
+  Shell & 9.193 & 3710600 & 28.038 & 11204764 & 39.989 & 19115054 \\
   \hline
-  Heap & 19.542 & 6519813 & 60.3 & 21431637 & 102.634 & 37116275 \\
+  Heap & 18.311 & 6519703 & 57.692 & 21431472 & 90.107 & 37116054 \\
   \hline
-  Merge & 1.694 & 406234 & 3.632 & 1332186 & 6.21 & 2320874 \\
+  Merge & 13.929 & 5052616 & 40.513 & 16239347 & 63.774 & 27981864 \\
   \hline
-  Quick & 13.286 & 4891754 & 43.119 & 15848682 & 71.659 & 27234634 \\
+  Quick & 4.53 & 2268955 & 15.264 & 7275735 & 22.691 & 12475755 \\
   \hline
-  Counting & 1.267 & 600003 & 3.35 & 1800003 & 5.708 & 3000003 \\
+  Counting & 0.962 & 600003 & 3.102 & 1800003 & 4.906 & 3000003 \\
   \hline
-  Radix & 13 & 2100132 & 44.787 & 7500158 & 76.2 & 12500158 \\
+  Radix & 12.661 & 2100132 & 46.058 & 7500158 & 65.558 & 12500158 \\
   \hline
-  Flash & 4.02 & 1034996 & 11.634 & 3104996 & 19.422 & 5174996 \\
+  Flash & 3.757 & 1034972 & 10.606 & 3104966 & 17.504 & 5174966 \\
   \hline
 \end{tabular}
 
